--- a/public/index.html
+++ b/public/index.html
@@ -17,128 +17,157 @@
         <h3 class="text-dark bg-transparent p-3"></h3>
       </div>
     </header>
-    <main class="container-fluid mx-auto">
-      <section class="text-light bg-dark bg-opacity-75 flex-row align-center justify-space-between">
-        <h4>Ingredient's List</h4>
-        <div class="row p-3">
-          <div class="col">
-            <input type="checkbox" id="Flour-input" name="diet" value="Flour">
-            <label for="Flour-input">Flour</label>
-          </div>
-          <div class="col">
-            <input type="checkbox" id="Salt-input" name="diet" value="Salt">
-            <label for="Salt-input">Salt</label>
-          </div>
-          <div class="col">
-            <input type="checkbox" id="Butter-input" name="diet" value="Butter">
-            <label for="Butter-input">Butter</label>
-          </div>
-        </div>
-        <div class="row p-3">
-          <div class="col">
-            <input type="checkbox" id="Egg-input" name="diet" value="Egg">
-            <label for="Egg-input">Egg</label>
-          </div>
-          <div class="col">
-            <input type="checkbox" id="Sugar-input" name="diet" value="Sugar">
-            <label for="Sugar-input">Sugar</label>
-          </div>
-          <div class="col">
-            <input type="checkbox" id="Chiken-input" name="diet" value="Chiken">
-            <label for="Chiken-input">Chiken</label>
-          </div>
-        </div>
-        <div class="row p-3">
-          <div class="col">
-            <input type="checkbox" id="Rice-input" name="diet" value="Rice">
-            <label for="Rice-input">Rice</label>
-          </div>
-          <div class="col">
-            <input type="checkbox" id="Bacon-input" name="diet" value="Bacon">
-            <label for="Bacon-input">Bacon</label>
-          </div>
-          <div class="col">
-            <input type="checkbox" id="Ham-input" name="diet" value="Ham">
-            <label for="Ham-input">Ham</label>
-          </div>
-        </div>
-        <div class="row p-3">
-          <div class="col">
-            <input type="checkbox" id="Bread-input" name="diet" value="Bread">
-            <label for="Bread-input">Bread</label>
-          </div>
-          <div class="col">
-            <input type="checkbox" id="Cheese-input" name="diet" value="Cheese">
-            <label for="Cheese-input">Cheese</label>
-          </div>
-          <div class="col">
-            <input type="checkbox" id="Waffle-input" name="diet" value="Waffle">
-            <label for="Waffle-input">Waffle</label>
+    <main>
+      <!-- Slection of Recipes -->
+      <section class="container">
+        <div class="row gx-5">
+          <div class="my-3 col">
+            <!-- Form -->
+            <form id="selection-form" class="p-3 border">
+              <h2>Select Recipe Difficult</h2>
+              <div class="p-3">
+                <div class="my-3">
+                  <input class="form-check-input" type="radio" name="difficult" id="difficult-input" value="1">
+                  <label class="form-check-label">
+                    Junior-Chef (1-3 Ingredients)
+                  </label>
+                </div>
+                <div class="my-3">
+                  <input class="form-check-input" type="radio" name="difficult" id="difficult-input" value="2">
+                  <label class="form-check-label">
+                    Sous-Chef (4-7 Ingredients)
+                  </label>
+                </div>
+                <div class="my-3">
+                  <input class="form-check-input" type="radio" name="difficult" id="difficult-input" value="3">
+                  <label class="form-check-label">
+                    Master-Chef (8-10 Ingredients)
+                  </label>
+                </div>
+              </div>
+              <!-- Search Buttom -->
+              <div id="search-button" class="d-grid gap-2">
+                <button class="btn btn-primary bg-gradient" type="button">Search</button>
+              </div>
+            </form>
           </div>
         </div>
       </section>
-     
-      <!-- Buttons -->
-      <div class="d-grid gap-2 d-md-flex justify-content-md-end p-3">
-        <button class="btn btn-primary bg-gradient me-md-2" type="button">Search</button>
-        <button class="btn btn-primary bg-gradient" type="button">Button</button>
-      </div>
 
       <!-- Add new recipe -->
-      <section class="p-3 mb-3 flex-row align-center">
-        <h2 class="text-dark col-12 col-lg-5">Add a New Recipe.</h2>
-      </section>
-  
-      <section class="my-4 flex-row justify-space-between text-light ">
-        <div class="col-12 col-lg-6 bg-dark p-3 mb-3">
-          <h3 class="text-light">Enter an Animal</h3>
-          <form id="animal-form">
-            <label for="animal-name" class="form-label">Animal Name</label>
-            <input type="text" id="animal-name" name="animal-name" class="form-input" placeholder="Enter Name">
-  
-            <label for="species-input" class="form-label">Species</label>
-            <input type="text" id="species-input" name="species" class="form-input" placeholder="Enter Species">
-  
-            <label for="diet-input" class="form-label">Diet</label>
-            <div class="flex-row justify-center">
-              <div class="col-auto mb-2">
-                <input type="radio" id="herbivore-input" name="diet" value="herbivore" checked>
-                <label for="herbivore-input">Herbivore</label>
-              </div>
-              <div class="col-auto mb-2">
-                <input type="radio" id="folivore-input" name="diet" value="folivore">
-                <label for="folivore-input">Folivore</label>
-              </div>
-              <div class="col-auto mb-2">
-                <input type="radio" id="carnivore-input" name="diet" value="carnivore">
-                <label for="carnivore-input">Carnivore</label>
-              </div>
-              <div class="col-auto mb-2">
-                <input type="radio" id="omnivore-input" name="diet" value="omnivore">
-                <label for="omnivore-input">Omnivore</label>
-              </div>
-              <div class="col-auto mb-2">
-                <input type="radio" id="piscivore-input" name="diet" value="piscivore">
-                <label for="piscivore-input">Piscivore</label>
-              </div>
+      <div class="my-5 container">
+        <div class="row">
+          <div class="col-6">
+            <!-- Add New Recipe Form-->
+            <div class="p-3 border bg-info bg-opacity-25">
+              <h2>Add New Recipe</h2>
+              <form id="new-recipe-form">
+                <!-- Recipe name -->
+                <div class="mb-3">
+                  <label for="recipe-name" class="form-label">Recipe Name</label>
+                  <input type="name" class="form-control" id="recipe-name">
+                </div>
+                <!-- Select difficult -->
+                <div class="mb-3">
+                  <select class="form-select">
+                    <option disabled selected>Select Recipe Diffucult</option>
+                    <option value="1">Junior-Chef(1-3 Ingredients)</option>
+                    <option value="2">Sous-Chef(4-7 Ingredients)</option>
+                    <option value="3">Master-Chef(8-10 Ingredients)</option>
+                  </select>
+                </div>
+                <!-- Ingredients list -->
+                <div>
+                  <section class="text-light bg-dark bg-opacity-50 flex-row align-center justify-space-between">
+                    <h4 class="p-2">Ingredient's List</h4>
+                    <div class="row p-3">
+                      <div class="col">
+                        <input type="checkbox" id="Flour-input" name="diet" value="Flour">
+                        <label for="Flour-input">Flour</label>
+                      </div>
+                      <div class="col">
+                        <input type="checkbox" id="Salt-input" name="diet" value="Salt">
+                        <label for="Salt-input">Salt</label>
+                      </div>
+                      <div class="col">
+                        <input type="checkbox" id="Butter-input" name="diet" value="Butter">
+                        <label for="Butter-input">Butter</label>
+                      </div>
+                    </div>
+                    <div class="row p-3">
+                      <div class="col">
+                        <input type="checkbox" id="Egg-input" name="diet" value="Egg">
+                        <label for="Egg-input">Egg</label>
+                      </div>
+                      <div class="col">
+                        <input type="checkbox" id="Sugar-input" name="diet" value="Sugar">
+                        <label for="Sugar-input">Sugar</label>
+                      </div>
+                      <div class="col">
+                        <input type="checkbox" id="Chiken-input" name="diet" value="Chiken">
+                        <label for="Chiken-input">Chiken</label>
+                      </div>
+                    </div>
+                    <div class="row p-3">
+                      <div class="col">
+                        <input type="checkbox" id="Rice-input" name="diet" value="Rice">
+                        <label for="Rice-input">Rice</label>
+                      </div>
+                      <div class="col">
+                        <input type="checkbox" id="Bacon-input" name="diet" value="Bacon">
+                        <label for="Bacon-input">Bacon</label>
+                      </div>
+                      <div class="col">
+                        <input type="checkbox" id="Ham-input" name="diet" value="Ham">
+                        <label for="Ham-input">Ham</label>
+                      </div>
+                    </div>
+                    <div class="row p-3">
+                      <div class="col">
+                        <input type="checkbox" id="Bread-input" name="diet" value="Bread">
+                        <label for="Bread-input">Bread</label>
+                      </div>
+                      <div class="col">
+                        <input type="checkbox" id="Cheese-input" name="diet" value="Cheese">
+                        <label for="Cheese-input">Cheese</label>
+                      </div>
+                      <div class="col">
+                        <input type="checkbox" id="Waffle-input" name="diet" value="Waffle">
+                        <label for="Waffle-input">Waffle</label>
+                      </div>
+                    </div>
+                  </section>
+                  <div class="mt-2 d-grid gap-2 d-md-flex justify-content-md-end">
+                    <button class="btn btn-primary me-md-2" type="button">Add Ingredient</button>
+                  </div>
+                </div>
+                <!-- Instrutions -->
+                <div class="my-3">
+                  <div class="form-floating">
+                    <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
+                    <label for="floatingTextarea2">Instructions</label>
+                  </div>
+                </div>
+                <!-- Add  recipe button -->
+                <div class="d-grid gap-2">
+                  <button type="submit" class="btn btn-primary">Add Recipe</button>
+                </div>
+              </form>
             </div>
-  
-            <label for="personality-input" class="form-label">Personality Traits (pick all that apply)</label>
-            <small>On macOS, use <kbd>command + click</kbd></small> <br />
-            <small>On Windows, use <kdb>ctrl + click</kdb></small>
-            <select multiple id="personality-input" class="form-input" name="personality">
-              <option value="hungry">Hungry</option>
-              <option value="zany">Zany</option>
-              <option value="anxious">Anxious</option>
-              <option value="loving">Loving</option>
-              <option value="goofy">Goofy</option>
-            </select>
-  
-            <button class="btn">Add Animal</button>
-          </form>
+          </div>
+
+          <!-- Other columns -->
+          <div class="col">
+            <div id="recipe-resuts"class="p-3 border">
+              <p id="recipe-results-p"></p>
+            </div>
+          </div>
         </div>
+      </div>
+
     </main>
 
+    <script src="../index.js"></script>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
